--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -7,6 +7,7 @@ imports:
     - { resource: "@SyliusShopBundle/Resources/config/app/config.yml" }
 
     - { resource: "@SyliusApiBundle/Resources/config/app/config.yaml" }
+    - { resource: "@MadcodersSyliusRmaPlugin/Resources/config/config.yml" }
 
 parameters:
     sylius_core.public_dir: '%kernel.project_dir%/public'
