--- a/tests/Application/config/packages/madcoders_default_fixtures.yaml
+++ b/tests/Application/config/packages/madcoders_default_fixtures.yaml
@@ -7,5 +7,8 @@ sylius_fixtures:
                         custom:
                             draft_order_return:
                                 order_number: "00000011"
-                                channel_code: "DEFAULT"
+                                channel_code: "FASHION_WEB"
+                                return_reason: "damaged"
+                                return_consent: false
+                                return_consent_label: null
 
