add return order items to fixtures and first example

--- a/tests/Application/config/packages/madcoders_default_fixtures.yaml
+++ b/tests/Application/config/packages/madcoders_default_fixtures.yaml
@@ -7,8 +7,20 @@ sylius_fixtures:
                         custom:
                             draft_order_return:
                                 order_number: "00000011"
+                                return_number: "R00000011-1"
                                 channel_code: "FASHION_WEB"
                                 return_reason: "damaged"
                                 return_consent: false
                                 return_consent_label: null
+
+                madcoders_rma_order_return_item:
+                    options:
+                        custom:
+                            draf_order_return_item_1:
+                                return_number: "R00000011-1"
+                                product_sku: "XYZ00123"
+                                product_name: "Not so good product"
+                                return_qty: 1
+                                unit_price: 1190
+
 
