Add pdf generator to "Return Form"

--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -27,3 +27,8 @@ JWT_PASSPHRASE=acme_plugin_development
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=smtp://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
