--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.3",
+        "knplabs/knp-snappy-bundle": "^1.8",
         "sylius/sylius": "~1.8.0 || ~1.9.0"
     },
     "conflict": {
