Sending email with Return Order Form

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -3,7 +3,9 @@ sylius_mailer:
     authcode_generated:
       subject: sylius.emails.authcode_generated.subject
       template: "@MadcodersSyliusRmaPlugin/Email/authCodeGenerated.html.twig"
-
+    return_generated:
+      subject: sylius.emails.return_generated.subject
+      template: "@MadcodersSyliusRmaPlugin/Email/returnFormGenerated.html.twig"
 
 
 # order return state machine
