Add first version list to Admin Return Order

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -1,3 +1,6 @@
+imports:
+  - { resource: "@MadcodersSyliusRmaPlugin/Resources/config/grids.yaml" }
+
 sylius_mailer:
   emails:
     authcode_generated:
