--- a/src/Resources/config/grids/madcoders_rma_admin_return_orders_grid.yml
+++ b/src/Resources/config/grids/madcoders_rma_admin_return_orders_grid.yml
@@ -6,7 +6,7 @@ sylius_grid:
         options:
           class: Madcoders\SyliusRmaPlugin\Entity\OrderReturn
       sorting:
-        returnNumber: desc
+        id: desc
       fields:
         date:
           type: datetime
