--- a/src/Resources/config/grids/madcoders_rma_admin_return_orders_grid.yml
+++ b/src/Resources/config/grids/madcoders_rma_admin_return_orders_grid.yml
@@ -32,6 +32,13 @@ sylius_grid:
           sortable: ~
           options:
             template: "@MadcodersSyliusRmaPlugin/Admin/Return/Grid/Field/number.html.twig"
+        customer:
+          path: .
+          type: twig
+          label: sylius.ui.customer
+          sortable: lastName
+          options:
+            template: "@MadcodersSyliusRmaPlugin/Admin/Return/Grid/Field/customer.html.twig"
         orderReturnStatus:
           type: twig
           label: sylius.ui.state
