--- a/src/Resources/config/grids.yaml
+++ b/src/Resources/config/grids.yaml
@@ -1,2 +1,3 @@
 imports:
     - { resource: "@MadcodersSyliusRmaPlugin/Resources/config/grids/madcoders_rma_admin_return_orders_grid.yml" }
+    - { resource: "@MadcodersSyliusRmaPlugin/Resources/config/grids/madcoders_rma_shop_return_orders_grid.yml" }
