Customer area translations + partial admin translations

--- a/src/Resources/config/grids/madcoders_rma_shop_account_order_grid.yml
+++ b/src/Resources/config/grids/madcoders_rma_shop_account_order_grid.yml
@@ -8,7 +8,7 @@ sylius_grid:
                 item:
                     madcoders_rma_create_new:
                         type: madcoders_rma_create_new
-                        label: madcoders_rma.ui.create_new_return
+                        label: madcoders_rma.ui.action.create_new_return
                         options:
                             link:
                                 route: madcoders_rma_shop_account_create_new_return
