--- a/src/Resources/config/routing/admin_routing.yml
+++ b/src/Resources/config/routing/admin_routing.yml
@@ -29,6 +29,22 @@ madcoders_rma_admin_order_return_reason:
             icon: 'edit outline'
   type: sylius.resource
 
+madcoders_rma_admin_order_return_consent:
+  resource: |
+    alias: madcoders_rma.order_return_consent
+    section: admin
+    templates: "@SyliusAdmin\\Crud"
+    redirect: update
+    grid: madcoders_rma_admin_return_consent
+    vars:
+        all:
+            subheader: madcoders_rma.ui.return_consent_list
+            templates:
+                form: "@MadcodersSyliusRmaPlugin/Admin/Consent/_form.html.twig"
+        index:
+            icon: 'briefcase'
+  type: sylius.resource
+
 madcoders_rma_admin_order_return_show:
   path: /order-returns/{id}
   methods: [ GET, POST ]
@@ -41,8 +57,6 @@ madcoders_rma_admin_order_return_show:
       repository:
         arguments:
           - $id
-
-#madcoders_rma_admin_order_return_reason_show:
 
 madcoders_rma_admin_order_return_show_cancel:
   path: /order-returns/{id}/cancel/{_csrf_token}
