--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -32,3 +32,7 @@ MAILER_URL=smtp://localhost:1025
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+# mailer
+MAILER_NAME='MADCODERS'
+MAILER_ADDRESS=plugin-factory@madcoders.dev
