--- a/tests/Application/config/packages/madcoders_default_fixtures.yaml
+++ b/tests/Application/config/packages/madcoders_default_fixtures.yaml
@@ -21,4 +21,45 @@ sylius_fixtures:
                                 return_qty: 1
                                 unit_price: 1190
 
+                madcoders_rma_order_return_reason:
+                    options:
+                        custom:
+                            madcoders_rma_order_return_reason_1:
+                                code: reason_1
+                                slug: reason_1
+                                name: "Reason 1"
+                                enabled: true
+                                deadline_to_return: 90
+                            madcoders_rma_order_return_reason_2:
+                                code: reason_2
+                                slug: reason_2
+                                name: "Reason 2"
+                                enabled: true
+                                deadline_to_return: 120
+                            madcoders_rma_order_return_reason_3:
+                                code: reason_3
+                                slug: reason_3
+                                name: "Free return (in 14 days)"
+                                enabled: true
+                                deadline_to_return: 14
+                            madcoders_rma_order_return_reason_disabled:
+                                code: reason_disabled
+                                slug: reason_disabled
+                                name: "This reason is disabled"
+                                enabled: false
+                                deadline_to_return: 14
+
+                madcoders_rma_order_return_consent:
+                    options:
+                        custom:
+                            madcoders_rma_order_return_consent_1:
+                                code: consent_1
+                                slug: consent_1
+                                name: "Consent label xyz xyz xyz 1"
+                                enabled: true
+                            madcoders_rma_order_return_consent_2:
+                                code: consent_2
+                                slug: consent_2
+                                name: "Consent label xyz xyz xyz 2"
+                                enabled: true
 
