--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -46,7 +46,7 @@ default:
         FriendsOfBehat\SymfonyExtension:
             bootstrap: tests/Application/config/bootstrap.php
             kernel:
-                class: Tests\Acme\SyliusExamplePlugin\Application\Kernel
+                class: Tests\Madcoders\SyliusRmaPlugin\Application\Kernel
 
         FriendsOfBehat\VariadicExtension: ~
 
