--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -1,10 +1,3 @@
-# Put your Behat suites definitions here
-
-default:
-    suites:
-        greeting_customer:
-            contexts:
-                - madcoders.rma.context.ui.shop.welcome
-
-            filters:
-                tags: "@madcoders_rma"
+imports:
+    - suites/ui/credits.yml
+    - suites/ui/shop/rma/auth.yml
