SYLRMA-19 add e-mail context

--- a/tests/Behat/Resources/suites/ui/shop/rma/auth.yml
+++ b/tests/Behat/Resources/suites/ui/shop/rma/auth.yml
@@ -26,6 +26,7 @@ default:
                 - sylius.behat.context.transform.lexical
 
                 # ui
+                - sylius.behat.context.ui.email
                 - madcoders.rma.context.ui.shop.rma.auth
 
             filters:
