--- a/tests/Behat/Resources/suites/ui/shop/rma/auth.yml
+++ b/tests/Behat/Resources/suites/ui/shop/rma/auth.yml
@@ -15,6 +15,7 @@ default:
                 - sylius.behat.context.setup.address
                 - sylius.behat.context.setup.product
                 - madcoders.rma.context.setup.order
+                - madcoders.rma.context.setup.auth
 
                 # transformers
                 - sylius.behat.context.transform.channel
