--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,13 +10,13 @@ pipelines:
                   - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
                   - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --ignore-platform-reqs
                   - php vendor/bin/phpunit -c phpunit.xml.dist
-        - step:
-              name: "Static analysis"
-              caches:
-                  - composer
-              script:
-                  - apt-get update && apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev git zip
-                  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-                  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --ignore-platform-reqs
-                  - php vendor/bin/phpstan analyse -c phpstan.neon -l max src/
-                  - php vendor/bin/psalm
+#        - step:
+#              name: "Static analysis"
+#              caches:
+#                  - composer
+#              script:
+#                  - apt-get update && apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev git zip
+#                  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+#                  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --ignore-platform-reqs
+#                  - php vendor/bin/phpstan analyse -c phpstan.neon -l max src/
+#                  - php vendor/bin/psalm
