Added behat tests for consent functionality

--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -2,3 +2,4 @@ imports:
     - suites/ui/credits.yml
     - suites/ui/shop/rma/auth.yml
     - suites/ui/admin/rma/managing_return_reasons.yml
+    - suites/ui/admin/rma/managing_return_consents.yml
